app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_self
 *= require @glidejs/glide/dist/css/glide.core.css
 *= require @glidejs/glide/dist/css/glide.theme.css
 *= require card.css
 *= require card.css
 *=
 */


@import "font-awesome-sprockets";
@import "font-awesome";
@import "fonts";
@import "sunset.min.css";


img {
  max-width: 100%;
}

@import 'navbar';
@import 'footer';
@import "pages/home";
@import "pages/our_school";
@import "pages/fbla";
@import "pages/about_us";
@import "pages/terms_of_service";
@import "pages/privacy_policy";
@import "donations/donate";

html, body {
  padding: 0;
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.flash {
  transition: opacity 0.5s ease, max-height 0.5s ease, padding 0.5s ease;
  font: 400 14px/1.4 "Open Sans", Helvetica, Arial, sans-serif;
  text-align: center;
  padding: 14px 20px;
  max-height: 100px;
  position: fixed;
  width: 100%;
  opacity: 1;

  &.notice {
    background: #DFF5E1;
    color: #1E6B2E;
  }

  &.alert {
    background: #FBE1E1;
    color: #A3272B;
  }

  &.flash-hide {
    opacity: 0;
    max-height: 0;
    padding-top: 0;
    padding-bottom: 0;
  }
}

